fix scrolling defect. Improve visual testing to use filter image.